# kvdb

./: .gitignore  CMakeLists.txt  README.md
objc/: KVDatabase.m  KVIndexer.m  KVOrderedDatabase.m
settings/: README.md  build.sh  settings.c
src/: CMakeLists.txt  kvblock.c  kvdb.c  kvdb_tests.cpp  kvdbo.cpp  kvdbo_tests.cpp  kvio.h  kvmurmurhash.h  kvserialization.cpp  kvserialization.h  kvtable.c  kvtypes.h  kvunicode.c  kvunicode.h  sfts.cpp  sfts.h  sfts_tests.cpp
